<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.phuong.mymusic.ui.customview.PlayerScreenMotionLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        app:layoutDescription="@xml/fragment_player_scene"
        app:layout_collapseMode="parallax">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/album_art_image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:outlineProvider="none"
            android:scaleType="centerCrop"
            android:src="@drawable/aodai"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_artis_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_play_all"
            android:textAlignment="center"
            android:textColor="@color/artis_name"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@id/tv_song_name"
            app:layout_constraintStart_toStartOf="@id/tv_song_name"
            app:layout_constraintTop_toBottomOf="@id/tv_song_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_song_name_mini"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:text="@string/allow_permission"
            android:textAlignment="center"
            android:textColor="@color/song_name"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintStart_toEndOf="@id/album_art_image_view"
            app:layout_constraintTop_toTopOf="@id/album_art_image_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_artis_name_mini"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toEndOf="@id/album_art_image_view"
            app:layout_constraintTop_toBottomOf="@id/tv_song_name_mini" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:text="@string/action_delete_from_device"
            android:textAlignment="center"
            android:textColor="@color/song_name"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="@id/album_art_image_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/album_art_image_view"
            app:layout_constraintTop_toBottomOf="@id/album_art_image_view" />

        <androidx.cardview.widget.CardView
            android:id="@+id/player_background_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/playerBackground"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.phuong.mymusic.ui.customview.PlayerScreenMotionLayout>
</layout>